@@ -14,6 +14,8 @@
 
 @item removed 2-bit annotation -- Wendy can do this
 @end itemize
+
+@item implemented Wendy's new IG/OG formats
 @end itemize
 
 
