@@ -24,6 +24,8 @@ Version 1.14-unreleased
 
      * removed 2-bit annotation - Wendy can do this
 
+* implemented Wendy's new IG/OG formats
+
 Version 1.13 (6 June 2009)
 ==========================
 
